5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1630_2939.log
== TEST (2019-04-02 16:18:59) 
-- CODE:
var1 = input("Quantos foram vendidos? ")
var2 = var1*12
var3 = var1-(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = var1-(20/100)+100
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:52) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var1-(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
230.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:54) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var1-(20/100))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
230.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:44) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var1-(0.2*10))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
232.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:44) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-(20/100))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-99.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:04) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-(0.2*10)+100
var4 = var2-var3
print(round(var4, 2))
-- ERROR:
File "XXXX", line 4
    var4 = var2-var3
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:58) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2-(0.2*10)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-98.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:34) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-(0.2*10))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-98.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:10) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2/(0.2*10))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:05) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-0.2*10)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-98.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:35) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-0.2*100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:02) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = (var2-(0.2*100))+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:59) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2-(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-99.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:05) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2-(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-99.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:16) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:42) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2*(0.2*10)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-460.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:07) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:37) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:00) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)
var4 = var2-var3-100
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:41) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*0.2+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:18) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(0.2*10)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
-460.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:34) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:57) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:10) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:20) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:25) 
-- CODE:
var1 = int(input("Quantos foram vendidos? "))
var2 = var1*12.00
var3 = var2*(20/100)+100
var4 = var2-var3
print(round(var4, 2))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
